--- a/_config.yml
+++ b/_config.yml
@@ -35,22 +35,20 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=0q1y-kYAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/0000-0002-3141-3591"
   semantic         : # URL
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Lukas_Laffers"
   scopus           : # URL
 
   # Repositories and software development
   github           : "lukaslaffers"
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
-  facebook         : # Username
-  instagram        : # Username
-  linkedin         : # Username
-  twitter          : @lukaslaffers for X / Twitter
-  youtube          : # Username
+  bluesky          : "lukaslaffers.bsky.social"
+  facebook         : "lukaslaffers"
+  linkedin         : "lukaslaffers"
+  twitter          : "@lukaslaffers"
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
