--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,23 +5,17 @@
 # prevent it from being included in the site.
 
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Research"
+    url: /research/
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
   - title: "CV"
-    url: /cv/
+    url: /cv/    
+
+  - title: "Presentations"
+    url: /presentations/    
     
-  - title: "Guide"
-    url: /markdown/
+  - title: "Teaching"
+    url: /teaching/
+        
+  - title: "Misc"
+    url: /misc/
