--- a/_config.yml
+++ b/_config.yml
@@ -24,25 +24,24 @@ author:
   # Biographic information
   avatar           : "foto_LL.jpg"
   name             : "Lukáš Lafférs, PhD."
-  bio              : "econometrics/statistics/economics"
+  bio              : "econometrics, statistics, economics"
   employer         : "Matej Bel University"
-  location         : "Banská Bystrica, Slovakia"
-  uri              : "www.lukaslaffers.com"
+  #location         : "Banská Bystrica, Slovakia"
+  #uri              : "www.lukaslaffers.com"
   email            : "lukas.laffers@gmail.com" 
 
   # Academic websites
   googlescholar    : "https://scholar.google.com/citations?user=0q1y-kYAAAAJ&hl=en"
   orcid            : "https://orcid.org/0000-0002-3141-3591"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : "https://www.researchgate.net/profile/Lukas_Laffers"
   scopus           : "https://www.scopus.com/authid/detail.uri?authorId=55775231300"
 
   # Repositories and software development
-  github           : "lukaslaffers"
+  #github           : "lukaslaffers"
 
   # Social media
   bluesky          : "lukaslaffers.bsky.social"
-  facebook         : "lukaslaffers"
+  #facebook         : "lukaslaffers"
   linkedin         : "lukaslaffers"
   twitter          : "@lukaslaffers"
 
