--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
     url: /about/
     
   - title: "Research"
-    url: /research/
+    url: /publications/
 
   - title: "CV"
     url: /cv/    
