--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,14 +11,11 @@ main:
   - title: "Research"
     url: /research/
 
-  - title: "CV"
-    url: /cv/    
-
   - title: "Presentations"
     url: /presentations/    
     
   - title: "Teaching"
-    url: /teaching/
+    url: /teachings/
         
   - title: "Misc"
     url: /misc/
