--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "www.lukaslaffers.com"
+title                    : "                    "
 title_separator          : "-"
 name                     : &name "Lukáš Lafférs"
 description              : &description "personal website"
