--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
     url: /presentations/    
     
   - title: "Teaching"
-    url: /teachings/
+    url: /teach/
         
   - title: "Misc"
     url: /misc/
