--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ analytics:
   provider               :  "google" # false (default), "google", "google-universal", "google-analytics-4", "custom"
   google:
     tracking_id          : "G-L1M9ESE6J1"
-
+google_analytics: "G-L1M9ESE6J1"
 
 # Reading Files
 include:
