--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google" # false (default), "google", "google-universal", "google-analytics-4", "custom"
+  provider               : "custom"
   google:
     tracking_id          : "G-L1M9ESE6J1"
 google_analytics: "G-L1M9ESE6J1"
